Adicionando deleção de presença.

--- a/src/com/jornada/client/content/i18n/TextConstants.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants.properties
@@ -461,7 +461,7 @@ ocorrenciaErroBuscarAluno = It was not possible to load the Students.
 ocorrenciaErroSalvar = NonConformance can not be saved!!!
 ocorrenciaSalva = NonConformance successfully saved.
 ocorrenciaAtualizada = NonConformance successfully updated.
-ocorrenciaAdicionarNovaOcorrência = Add new NonConformance
+ocorrenciaAdicionarNovaOcorrencia = Add new NonConformance
 ocorrenciaEditar = Update NonConformance
 ocorrenciaSelecionarConteudo = Please, select Subject.
 ocorrenciaEditarDetalhes = Update Details
@@ -497,6 +497,7 @@ presencaAmbienteDiario = Online Presence
 presencaAmbienteDiarioAcompanhamento = Follow:\n
 presencaAmbienteDiarioPresenca = - Presence.\n
 presencaAmbienteDiarioConteudo = - Classroom Content.\n
+presencaRemoverMsg = Do you really want to remove this presence: {0} ?
 ########### PRESENCA END ###########
 
 
