--- a/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
@@ -460,7 +460,7 @@ ocorrenciaErroBuscarAluno = Não foi possível buscar os Alunos.
 ocorrenciaErroSalvar = Ocorrência não pode ser salvo com sucesso!!!
 ocorrenciaSalva = Ocorrência salva com sucesso.
 ocorrenciaAtualizada = Ocorrência atualizada com sucesso.
-ocorrenciaAdicionarNovaOcorrência = Adicionar Nova Ocorrência
+ocorrenciaAdicionarNovaOcorrencia = Adicionar Nova Ocorrência
 ocorrenciaEditar = Editar Ocorrências
 ocorrenciaSelecionarConteudo = Por favor, selecione um Matéria.
 ocorrenciaEditarDetalhes = Editar Detalhes
@@ -495,6 +495,7 @@ presencaAmbienteDiario = Presença Online
 presencaAmbienteDiarioAcompanhamento = Acompanhamento de:\n
 presencaAmbienteDiarioPresenca = - Presença.\n
 presencaAmbienteDiarioConteudo = - Conteúdo das Aulas.\n
+presencaRemoverMsg = Deseja mesmo remover essa presença: {0} ?
 ########### PRESENCA END ###########
 
 
