Adicionando Comunicado professor.

--- a/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
@@ -34,6 +34,7 @@ menuTokenFerramentaProfessor = ferramenta.professor
 menuTokenFerramentaProfessorAvaliacao = ferramenta.professor.avaliacao
 menuTokenFerramentaProfessorNota = ferramenta.professor.nota
 menuTokenFerramentaProfessorTopico = ferramenta.professor.topico
+menuTokenFerramentaProfessorComunicado = ferramenta.professor.comunicado
 menuTokenFerramentaProfessorOcorrencia = ferramenta.professor.ocorrencia
 menuTokenFerramentaProfessorHierarquia = ferramenta.professor.hierarquia
 menuTokenFerramentaProfessorDiario = ferramenta.professor.diario
@@ -104,6 +105,10 @@ professorAmbienteNotasCompText2 =- Notas Escolares.\n
 professorAmbienteOcorrencia = Ocorrência
 professorAmbienteOcorrenciaCompText1 = Adicionar e Alterar: \n
 professorAmbienteOcorrenciaCompText2 = - Ocorrências dos Alunos.\n
+
+professorAmbienteComunicado = Comunicados e Novidades da Escola
+professorAmbienteComunicadoCompText1 = Comunicações e Novidades para: \n
+professorAmbienteComunicadoCompText2 = - Pais, Alunos e Professores.\n
 
 professorAmbienteTopico = Tópicos	
 professorAmbienteTopicoCompText1 = Adicionar e Alterar Tópicos: \n
