--- a/src/com/jornada/client/content/i18n/TextConstants.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants.properties
@@ -33,6 +33,7 @@ menuTokenFerramentaProfessor = ferramenta.professor
 menuTokenFerramentaProfessorAvaliacao = ferramenta.professor.avaliacao
 menuTokenFerramentaProfessorNota = ferramenta.professor.nota
 menuTokenFerramentaProfessorTopico = ferramenta.professor.topico
+menuTokenFerramentaProfessorComunicado = ferramenta.professor.comunicado
 menuTokenFerramentaProfessorOcorrencia = ferramenta.professor.ocorrencia
 menuTokenFerramentaProfessorHierarquia = ferramenta.professor.hierarquia
 menuTokenFerramentaProfessorDiario = ferramenta.professor.diario
@@ -103,6 +104,10 @@ professorAmbienteNotasCompText2 = - School Grades.\n
 professorAmbienteOcorrencia = NonConformance
 professorAmbienteOcorrenciaCompText1 = Add and Update: \n
 professorAmbienteOcorrenciaCompText2 = - Student NonConformance.\n
+
+professorAmbienteComunicado = News and Announcement
+professorAmbienteComunicadoCompText1 = News and Announcement for: \n
+professorAmbienteComunicadoCompText2 = - Teachers, Parents and Students.\n
 
 professorAmbienteTopico = Topics	
 professorAmbienteTopicoCompText1 = Add and Update Topics: \n
