- Alterar evento dos campos Enter KeyUp ao invês de KeyPress - Intregrado : Importar alunos de um curso anterior no criar curso por template

--- a/src/com/jornada/client/content/i18n/TextConstants.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants.properties
@@ -192,6 +192,7 @@ paisAmbienteHierarquiaCompText2 = - By Hierarchy Level.\n
 ########### Curso Começo ###########  
 curso = Course
 cursoNome = Course Name
+cursoNovoCurso = New Course Name
 cursoDescricao = Description
 cursoEmenta = Objective
 cursoMediaNota = Average Grade
@@ -202,8 +203,8 @@ cursoSalvar = Save
 cursoAdicionar = Add Course
 cursoEditar = Update Course
 cursoAdicionarAlunoAoCurso = Adding Student to the Course
-cursoSelecionarCurso = 1 - Please, select the course to associate
-cursoSelecionarAluno = 2 - Please, select the student to associate with the course
+cursoSelecionarCurso = 1 - Please, select the course to associate with the Students
+cursoSelecionarAluno = 2 - Please, select the student to associate with the Course
 cursoFiltrar = Filter course
 cursoSalvoSucesso = Course saved successfully
 cursoCampoNomeObrigatorio = Field 'Course Name' must be filled!
@@ -219,7 +220,7 @@ cursoAlunosAssociados = Associated Students
 cursoAssociarAlunos = Associate students to the course
 cursoAlunosDoCurso = Students in the Course:
 cursoAlunosInseridosComSucesso = Students added successfully.
-cursoTemplate = Course Template
+cursoTemplate = Use Course structure
 cursoUsarCursoJaCriado = Use already created course to generate a new one?
 cursoNavegacao = Course Navigation
 cursoCompText1 = Add and Update Course: \n
