--- a/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
@@ -191,6 +191,7 @@ paisAmbienteHierarquiaCompText2 = - Por Nível Hierárquico.\n
 ########### Curso Começo ###########  
 curso = Curso
 cursoNome = Nome Curso
+cursoNovoCurso = Nome Novo Curso
 cursoDescricao = Descrição
 cursoEmenta = Ementa
 cursoMediaNota = Média Nota
@@ -201,8 +202,8 @@ cursoSalvar = Salvar
 cursoAdicionar = Adicionar Curso
 cursoEditar = Editar Curso
 cursoAdicionarAlunoAoCurso = Adicionar Aluno ao Curso
-cursoSelecionarCurso = 1 - Por favor, selecione o Curso que deseja associar
-cursoSelecionarAluno = 2 - Por favor, selecione os Alunos que deseja associar ao curso
+cursoSelecionarCurso = 1 - Por favor, selecione o Curso que deseja associar aos Alunos
+cursoSelecionarAluno = 2 - Por favor, selecione os Alunos que deseja associar ao Curso
 cursoFiltrar = Filtrar lista de cursos
 cursoSalvoSucesso = Curso salvo com sucesso.
 cursoCampoNomeObrigatorio = Campo 'Nome Curso' é de preenchimento obrigatório!
@@ -218,7 +219,7 @@ cursoAlunosAssociados = Aluno associados
 cursoAssociarAlunos = Associar Alunos aos Cursos
 cursoAlunosDoCurso = Alunos no Curso:
 cursoAlunosInseridosComSucesso = Alunos inseridos no Curso com sucesso.
-cursoTemplate = Template de Cursos
+cursoTemplate = Usar estrutura do Curso
 cursoUsarCursoJaCriado = Criar um curso novo a partir de um já cadastrado?
 cursoNavegacao = Navegação Cursos
 cursoCompText1 = Adicionar e Alterar Curso: \n
