- Adicionando Refresh quando a sessão não for mais válida. - Acertando bug de carregar dados de Ocorrencia do Aluno quando aluno logar.

--- a/src/com/jornada/client/content/i18n/TextConstants.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants.properties
@@ -546,6 +546,7 @@ geralSair = Logout
 geralOk = OK
 geralNumeroInteiro = Integer Number
 geralNumeroDouble = Number like 10.0 or 9.0
+geralRecarregarAmbiente = The environment will be reloaded to reactivate your session. Thank you.
 ############USO GERAL END############
 
 
