--- a/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
@@ -545,6 +545,7 @@ geralSair = Sair
 geralOk = OK
 geralNumeroInteiro = Número Inteiro
 geralNumeroDouble = Número do tipo 10.0 ou 9.0
+geralRecarregarAmbiente = O Ambiente será recarregado para reativar a sua sessão. Obrigado.
 ############USO GERAL END############
 
 
