Alterando código para ajustar cadastro de Alunos e pais de acordo com a escola Integrao.

--- a/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
@@ -326,9 +326,9 @@ usuarioSobreNome = Sobre Nome
 usuarioCPF = CPF
 usuarioEmail = Email
 usuarioDataNascimento = Data Nascimento
-usuarioTelCelular = Telefone Celular
-usuarioTelResidencial = Telefone Residencial
-usuarioTelComercial = Telefone Comercial
+usuarioTelCelular = Tel Celular
+usuarioTelResidencial = Tel Res
+usuarioTelComercial = Tel Com
 usuarioTipo = Tipo Usuário
 usuarioSenha = Senha
 usuarioErroSalvar = Usuário nao pode ser salvo com sucesso!!!
