Adicionando modificações de Cadastro de usuários.

--- a/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
@@ -61,7 +61,9 @@ principal = Principal
 ###########MainFooter Begin###########
 footerPolitica = Políticas de Privacidade
 footerUsoInterno = Uso Interno da Escola
-footerEmail = Email de Suporte
+footerEmailSuporte = Email de Suporte
+footerEmailSuporteMsg = Por favor envie um email para
+footerEmailEndereco = paisonline.ci.suporte@gmail.com
 footerLicensa = © Copyright 2014, Inc. All rights reserved.
 footerBrowser = Funciona melhor no Google Chrome.
 ###########MainFooter End###########
@@ -325,7 +327,7 @@ usuarioPrimeiroNome = Primeiro Nome
 usuarioSobreNome = Sobre Nome
 usuarioCPF = CPF
 usuarioEmail = Email
-usuarioDataNascimento = Data Nascimento
+usuarioDataNascimento = Data Nasc
 usuarioTelCelular = Tel Celular
 usuarioTelResidencial = Tel Res
 usuarioTelComercial = Tel Com
@@ -362,6 +364,27 @@ usuarioImportarArquivoExcel = Importar Arquivo Excel
 usuarioListaUsuariosInvalidos = 3 - Resultado de usuários que não puderam ser importados
 usuarioPlanilhaImportadoComSucesso = Arquivo Excel importado com sucesso 
 usuarioErroImportarUsuarios = Não foi possível importar os usuários listados no passo 3. \n  
+usuarioRespAcademico = Acadêmico
+usuarioRespFinanceiro = Financeiro
+usuarioDataMatricula = Data Matric
+usuarioMatricula = Matricula
+usuarioRG = RG
+usuarioSexo = Sexo
+usuarioEndereco = Endereço 
+usuarioNumRes = Num Res
+usuarioBairro = Bairro
+usuarioCidade = Cidade
+usuarioEstado = UF
+usuarioCep = Cep
+usuarioEmpresa = Empresa 
+usuarioCargo = Cargo
+usuarioResponsavel = Resp
+usuarioTipoPai = Tipo Pai
+usuarioSituacaoDosPais = Situação do Pais 
+usuarioCasados = Casados
+usuarioSeparados = Separados
+usuarioOutros = Outros
+usuarioErroLoginDuplicado =  Usuário ''{0}'' já existe.
 ############Usuários FIM############  
 
 
@@ -568,3 +591,48 @@ ajudaText1 = O Ambiente Pais OnLine foi criado\n
 ajudaText2 = para ajudar os pais no acompanhamento\n
 ajudaText3 =  de notas e progresso dos filhos na escola.
 ############AJUDA END############
+
+
+
+############ESTADOS BEGIN############
+ufAcre = Acre
+ufAlagoas = Alagoas
+ufAmapa = Amapá
+ufAmazonas = Amazonas   
+ufBahia = Bahia 
+ufCeara = Ceará
+ufDistritoFederal = Distrito Federal
+ufEspiritoSanto = Espírito Santo
+ufGoias = Goiás
+ufMaranhao = Maranhão  
+ufMatoGrosso = Mato Grosso
+ufMatoGrossoDoSul  = Mato Grosso do Sul
+ufMinasGerais = Minas Gerais
+ufPara = Pará
+ufParaiba = Paraíba  
+ufParana = Paraná
+ufPernambuco = Pernambuco
+ufPiaui = Piauí
+ufRioDeJaneiro = Rio de Janeiro
+ufRioGrandeDoSul = Rio Grande do Sul
+ufRioGrandeDoNorte = Rio Grande do Norte
+ufRondonia = Rondônia
+ufRoraima = Roraima
+ufSantaCatarina = Santa Catarina  
+ufSaoPaulo = São Paulo
+ufSergipe = Sergipe  
+ufTocantins = Tocantins  
+############ESTADOS END############
+
+############Tipos Pais BEGIN############
+tipoPaiMae = Mãe
+tipoPaiPai = Pai
+tipoPaiMadastra = Madastra 
+tipoPaiPadastro = Padastro
+tipoPaiOutros = Outros
+############Tipos Pais END############
+
+############Sexo BEGIN############
+sexoFeminino = Feminino
+sexoMasculino = Masculino 
+############Sexo END############
