Adicionando minor fixes.

--- a/src/com/jornada/client/content/i18n/TextConstants.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants.properties
@@ -61,7 +61,7 @@ principal = Main
 footerPolitica = Privacy Practices
 footerUsoInterno = School Internal Use
 footerEmailSuporte = Maillist Support
-footerEmailSuporteMsg = Please send an email to
+footerEmailSuporteMsg = Please send email to
 footerEmailEndereco = paisonline.ci.suporte@gmail.com
 footerLicensa = © Copyright 2014, Inc. All rights reserved.
 footerBrowser = Works better with Google Chrome.
