--- a/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
@@ -62,7 +62,7 @@ principal = Principal
 footerPolitica = Políticas de Privacidade
 footerUsoInterno = Uso Interno da Escola
 footerEmailSuporte = Email de Suporte
-footerEmailSuporteMsg = Por favor envie um email para
+footerEmailSuporteMsg = Por favor envie email para
 footerEmailEndereco = paisonline.ci.suporte@gmail.com
 footerLicensa = © Copyright 2014, Inc. All rights reserved.
 footerBrowser = Funciona melhor no Google Chrome.
