Adicionando suporte excel para novo cadastro de usuários.

--- a/src/com/jornada/client/content/i18n/TextConstants.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants.properties
@@ -570,6 +570,7 @@ geralOk = OK
 geralNumeroInteiro = Integer Number
 geralNumeroDouble = Number like 10.0 or 9.0
 geralRecarregarAmbiente = The environment will be reloaded to reactivate your session. Thank you.
+geralErro = Error
 ############USO GERAL END############
 
 
