--- a/war/WEB-INF/classes/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
+++ b/war/WEB-INF/classes/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
@@ -34,6 +34,7 @@ menuTokenFerramentaProfessor = ferramenta.professor
 menuTokenFerramentaProfessorAvaliacao = ferramenta.professor.avaliacao
 menuTokenFerramentaProfessorNota = ferramenta.professor.nota
 menuTokenFerramentaProfessorTopico = ferramenta.professor.topico
+menuTokenFerramentaProfessorComunicado = ferramenta.professor.comunicado
 menuTokenFerramentaProfessorOcorrencia = ferramenta.professor.ocorrencia
 menuTokenFerramentaProfessorHierarquia = ferramenta.professor.hierarquia
 menuTokenFerramentaProfessorDiario = ferramenta.professor.diario
@@ -60,7 +61,9 @@ principal = Principal
 ###########MainFooter Begin###########
 footerPolitica = Políticas de Privacidade
 footerUsoInterno = Uso Interno da Escola
-footerEmail = Email de Suporte
+footerEmailSuporte = Email de Suporte
+footerEmailSuporteMsg = Por favor envie email para
+footerEmailEndereco = paisonline.ci.suporte@gmail.com
 footerLicensa = © Copyright 2014, Inc. All rights reserved.
 footerBrowser = Funciona melhor no Google Chrome.
 ###########MainFooter End###########
@@ -104,6 +107,10 @@ professorAmbienteNotasCompText2 =- Notas Escolares.\n
 professorAmbienteOcorrencia = Ocorrência
 professorAmbienteOcorrenciaCompText1 = Adicionar e Alterar: \n
 professorAmbienteOcorrenciaCompText2 = - Ocorrências dos Alunos.\n
+
+professorAmbienteComunicado = Comunicados e Novidades da Escola
+professorAmbienteComunicadoCompText1 = Comunicações e Novidades para: \n
+professorAmbienteComunicadoCompText2 = - Pais, Alunos e Professores.\n
 
 professorAmbienteTopico = Tópicos	
 professorAmbienteTopicoCompText1 = Adicionar e Alterar Tópicos: \n
@@ -186,6 +193,7 @@ paisAmbienteHierarquiaCompText2 = - Por Nível Hierárquico.\n
 ########### Curso Começo ###########  
 curso = Curso
 cursoNome = Nome Curso
+cursoNovoCurso = Nome Novo Curso
 cursoDescricao = Descrição
 cursoEmenta = Ementa
 cursoMediaNota = Média Nota
@@ -196,8 +204,8 @@ cursoSalvar = Salvar
 cursoAdicionar = Adicionar Curso
 cursoEditar = Editar Curso
 cursoAdicionarAlunoAoCurso = Adicionar Aluno ao Curso
-cursoSelecionarCurso = 1 - Por favor, selecione o Curso que deseja associar
-cursoSelecionarAluno = 2 - Por favor, selecione os Alunos que deseja associar ao curso
+cursoSelecionarCurso = 1 - Por favor, selecione o Curso que deseja associar aos Alunos
+cursoSelecionarAluno = 2 - Por favor, selecione os Alunos que deseja associar ao Curso
 cursoFiltrar = Filtrar lista de cursos
 cursoSalvoSucesso = Curso salvo com sucesso.
 cursoCampoNomeObrigatorio = Campo 'Nome Curso' é de preenchimento obrigatório!
@@ -213,7 +221,7 @@ cursoAlunosAssociados = Aluno associados
 cursoAssociarAlunos = Associar Alunos aos Cursos
 cursoAlunosDoCurso = Alunos no Curso:
 cursoAlunosInseridosComSucesso = Alunos inseridos no Curso com sucesso.
-cursoTemplate = Template de Cursos
+cursoTemplate = Usar estrutura do Curso
 cursoUsarCursoJaCriado = Criar um curso novo a partir de um já cadastrado?
 cursoNavegacao = Navegação Cursos
 cursoCompText1 = Adicionar e Alterar Curso: \n
@@ -319,10 +327,10 @@ usuarioPrimeiroNome = Primeiro Nome
 usuarioSobreNome = Sobre Nome
 usuarioCPF = CPF
 usuarioEmail = Email
-usuarioDataNascimento = Data Nascimento
-usuarioTelCelular = Telefone Celular
-usuarioTelResidencial = Telefone Residencial
-usuarioTelComercial = Telefone Comercial
+usuarioDataNascimento = Data Nasc
+usuarioTelCelular = Tel Celular
+usuarioTelResidencial = Tel Res
+usuarioTelComercial = Tel Com
 usuarioTipo = Tipo Usuário
 usuarioSenha = Senha
 usuarioErroSalvar = Usuário nao pode ser salvo com sucesso!!!
@@ -356,6 +364,27 @@ usuarioImportarArquivoExcel = Importar Arquivo Excel
 usuarioListaUsuariosInvalidos = 3 - Resultado de usuários que não puderam ser importados
 usuarioPlanilhaImportadoComSucesso = Arquivo Excel importado com sucesso 
 usuarioErroImportarUsuarios = Não foi possível importar os usuários listados no passo 3. \n  
+usuarioRespAcademico = Acadêmico
+usuarioRespFinanceiro = Financeiro
+usuarioDataMatricula = Data Matric
+usuarioMatricula = Matricula
+usuarioRG = RG
+usuarioSexo = Sexo
+usuarioEndereco = Endereço 
+usuarioNumRes = Num Res
+usuarioBairro = Bairro
+usuarioCidade = Cidade
+usuarioEstado = UF
+usuarioCep = Cep
+usuarioEmpresa = Empresa 
+usuarioCargo = Cargo
+usuarioResponsavel = Resp
+usuarioTipoPai = Tipo Pai
+usuarioSituacaoDosPais = Situação do Pais 
+usuarioCasados = Casados
+usuarioSeparados = Separados
+usuarioOutros = Outros
+usuarioErroLoginDuplicado =  Usuário ''{0}'' já existe.
 ############Usuários FIM############  
 
 
@@ -460,7 +489,7 @@ ocorrenciaErroBuscarAluno = Não foi possível buscar os Alunos.
 ocorrenciaErroSalvar = Ocorrência não pode ser salvo com sucesso!!!
 ocorrenciaSalva = Ocorrência salva com sucesso.
 ocorrenciaAtualizada = Ocorrência atualizada com sucesso.
-ocorrenciaAdicionarNovaOcorrência = Adicionar Nova Ocorrência
+ocorrenciaAdicionarNovaOcorrencia = Adicionar Nova Ocorrência
 ocorrenciaEditar = Editar Ocorrências
 ocorrenciaSelecionarConteudo = Por favor, selecione um Matéria.
 ocorrenciaEditarDetalhes = Editar Detalhes
@@ -492,9 +521,10 @@ presencaQuantidadeJustificativas =Quantidade Justificativas
 presencaSalaDeAula = Presença em Sala de Aula
 presencaSituacao = Situação
 presencaAmbienteDiario = Presença Online
-presencaDiarioAcompanhamento = Acompanhamento de:\n
+presencaAmbienteDiarioAcompanhamento = Acompanhamento de:\n
 presencaAmbienteDiarioPresenca = - Presença.\n
 presencaAmbienteDiarioConteudo = - Conteúdo das Aulas.\n
+presencaRemoverMsg = Deseja mesmo remover essa presença: {0} ?
 ########### PRESENCA END ###########
 
 
@@ -538,6 +568,8 @@ geralSair = Sair
 geralOk = OK
 geralNumeroInteiro = Número Inteiro
 geralNumeroDouble = Número do tipo 10.0 ou 9.0
+geralRecarregarAmbiente = O Ambiente será recarregado para reativar a sua sessão. Obrigado.
+geralErro = Erro
 ############USO GERAL END############
 
 
@@ -560,3 +592,48 @@ ajudaText1 = O Ambiente Pais OnLine foi criado\n
 ajudaText2 = para ajudar os pais no acompanhamento\n
 ajudaText3 =  de notas e progresso dos filhos na escola.
 ############AJUDA END############
+
+
+
+############ESTADOS BEGIN############
+ufAcre = Acre
+ufAlagoas = Alagoas
+ufAmapa = Amapá
+ufAmazonas = Amazonas   
+ufBahia = Bahia 
+ufCeara = Ceará
+ufDistritoFederal = Distrito Federal
+ufEspiritoSanto = Espírito Santo
+ufGoias = Goiás
+ufMaranhao = Maranhão  
+ufMatoGrosso = Mato Grosso
+ufMatoGrossoDoSul  = Mato Grosso do Sul
+ufMinasGerais = Minas Gerais
+ufPara = Pará
+ufParaiba = Paraíba  
+ufParana = Paraná
+ufPernambuco = Pernambuco
+ufPiaui = Piauí
+ufRioDeJaneiro = Rio de Janeiro
+ufRioGrandeDoSul = Rio Grande do Sul
+ufRioGrandeDoNorte = Rio Grande do Norte
+ufRondonia = Rondônia
+ufRoraima = Roraima
+ufSantaCatarina = Santa Catarina  
+ufSaoPaulo = São Paulo
+ufSergipe = Sergipe  
+ufTocantins = Tocantins  
+############ESTADOS END############
+
+############Tipos Pais BEGIN############
+tipoPaiMae = Mãe
+tipoPaiPai = Pai
+tipoPaiMadastra = Madastra 
+tipoPaiPadastro = Padastro
+tipoPaiOutros = Outros
+############Tipos Pais END############
+
+############Sexo BEGIN############
+sexoFeminino = Feminino
+sexoMasculino = Masculino 
+############Sexo END############
