--- a/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
@@ -569,6 +569,7 @@ geralOk = OK
 geralNumeroInteiro = Número Inteiro
 geralNumeroDouble = Número do tipo 10.0 ou 9.0
 geralRecarregarAmbiente = O Ambiente será recarregado para reativar a sua sessão. Obrigado.
+geralErro = Erro
 ############USO GERAL END############
 
 
