--- a/war/WEB-INF/classes/com/jornada/client/content/i18n/TextConstants.properties
+++ b/war/WEB-INF/classes/com/jornada/client/content/i18n/TextConstants.properties
@@ -33,6 +33,7 @@ menuTokenFerramentaProfessor = ferramenta.professor
 menuTokenFerramentaProfessorAvaliacao = ferramenta.professor.avaliacao
 menuTokenFerramentaProfessorNota = ferramenta.professor.nota
 menuTokenFerramentaProfessorTopico = ferramenta.professor.topico
+menuTokenFerramentaProfessorComunicado = ferramenta.professor.comunicado
 menuTokenFerramentaProfessorOcorrencia = ferramenta.professor.ocorrencia
 menuTokenFerramentaProfessorHierarquia = ferramenta.professor.hierarquia
 menuTokenFerramentaProfessorDiario = ferramenta.professor.diario
@@ -59,7 +60,9 @@ principal = Main
 ###########MainFooter Begin###########
 footerPolitica = Privacy Practices
 footerUsoInterno = School Internal Use
-footerEmail = Support maillist
+footerEmailSuporte = Maillist Support
+footerEmailSuporteMsg = Please send email to
+footerEmailEndereco = paisonline.ci.suporte@gmail.com
 footerLicensa = © Copyright 2014, Inc. All rights reserved.
 footerBrowser = Works better with Google Chrome.
 ###########MainFooter End###########
@@ -103,6 +106,10 @@ professorAmbienteNotasCompText2 = - School Grades.\n
 professorAmbienteOcorrencia = NonConformance
 professorAmbienteOcorrenciaCompText1 = Add and Update: \n
 professorAmbienteOcorrenciaCompText2 = - Student NonConformance.\n
+
+professorAmbienteComunicado = News and Announcement
+professorAmbienteComunicadoCompText1 = News and Announcement for: \n
+professorAmbienteComunicadoCompText2 = - Teachers, Parents and Students.\n
 
 professorAmbienteTopico = Topics	
 professorAmbienteTopicoCompText1 = Add and Update Topics: \n
@@ -187,6 +194,7 @@ paisAmbienteHierarquiaCompText2 = - By Hierarchy Level.\n
 ########### Curso Começo ###########  
 curso = Course
 cursoNome = Course Name
+cursoNovoCurso = New Course Name
 cursoDescricao = Description
 cursoEmenta = Objective
 cursoMediaNota = Average Grade
@@ -197,8 +205,8 @@ cursoSalvar = Save
 cursoAdicionar = Add Course
 cursoEditar = Update Course
 cursoAdicionarAlunoAoCurso = Adding Student to the Course
-cursoSelecionarCurso = 1 - Please, select the course to associate
-cursoSelecionarAluno = 2 - Please, select the student to associate with the course
+cursoSelecionarCurso = 1 - Please, select the course to associate with the Students
+cursoSelecionarAluno = 2 - Please, select the student to associate with the Course
 cursoFiltrar = Filter course
 cursoSalvoSucesso = Course saved successfully
 cursoCampoNomeObrigatorio = Field 'Course Name' must be filled!
@@ -214,7 +222,7 @@ cursoAlunosAssociados = Associated Students
 cursoAssociarAlunos = Associate students to the course
 cursoAlunosDoCurso = Students in the Course:
 cursoAlunosInseridosComSucesso = Students added successfully.
-cursoTemplate = Course Template
+cursoTemplate = Use Course structure
 cursoUsarCursoJaCriado = Use already created course to generate a new one?
 cursoNavegacao = Course Navigation
 cursoCompText1 = Add and Update Course: \n
@@ -357,6 +365,27 @@ usuarioImportarArquivoExcel = Import Excel File
 usuarioListaUsuariosInvalidos = 3 - The following users could not be imported
 usuarioPlanilhaImportadoComSucesso = Excel file successfully imported 
 usuarioErroImportarUsuarios = Não foi possível importar os usuarios listados no passo 3.
+usuarioRespAcademico = Academic
+usuarioRespFinanceiro = Financial
+usuarioDataMatricula = Matric Date
+usuarioMatricula = Matriculation
+usuarioRG = RG
+usuarioSexo = Gender
+usuarioEndereco = Address 
+usuarioNumRes = Number
+usuarioBairro = Neighbor
+usuarioCidade = City
+usuarioEstado = State
+usuarioCep = Cep
+usuarioEmpresa = Company 
+usuarioCargo = Job
+usuarioResponsavel = Resp
+usuarioTipoPai = Parents Type
+usuarioSituacaoDosPais = Parents Situation 
+usuarioCasados = Married
+usuarioSeparados = Separated
+usuarioOutros = Other
+usuarioErroLoginDuplicado =  User ''{0}'' already exists.
 ############Usuários FIM############  
 
 
@@ -461,7 +490,7 @@ ocorrenciaErroBuscarAluno = It was not possible to load the Students.
 ocorrenciaErroSalvar = NonConformance can not be saved!!!
 ocorrenciaSalva = NonConformance successfully saved.
 ocorrenciaAtualizada = NonConformance successfully updated.
-ocorrenciaAdicionarNovaOcorrência = Add new NonConformance
+ocorrenciaAdicionarNovaOcorrencia = Add new NonConformance
 ocorrenciaEditar = Update NonConformance
 ocorrenciaSelecionarConteudo = Please, select Subject.
 ocorrenciaEditarDetalhes = Update Details
@@ -497,6 +526,7 @@ presencaAmbienteDiario = Online Presence
 presencaAmbienteDiarioAcompanhamento = Follow:\n
 presencaAmbienteDiarioPresenca = - Presence.\n
 presencaAmbienteDiarioConteudo = - Classroom Content.\n
+presencaRemoverMsg = Do you really want to remove this presence: {0} ?
 ########### PRESENCA END ###########
 
 
@@ -539,6 +569,8 @@ geralSair = Logout
 geralOk = OK
 geralNumeroInteiro = Integer Number
 geralNumeroDouble = Number like 10.0 or 9.0
+geralRecarregarAmbiente = The environment will be reloaded to reactivate your session. Thank you.
+geralErro = Error
 ############USO GERAL END############
 
 
@@ -564,5 +596,45 @@ ajudaText3 = progress from their kids in the school.
 ############AJUDA END############
 
 
+############ESTADOS BEGIN############
+ufAcre = Acre
+ufAlagoas = Alagoas
+ufAmapa = Amapá
+ufAmazonas = Amazonas   
+ufBahia = Bahia 
+ufCeara = Ceará
+ufDistritoFederal = Distrito Federal
+ufEspiritoSanto = Espírito Santo
+ufGoias = Goiás
+ufMaranhao = Maranhão  
+ufMatoGrosso = Mato Grosso
+ufMatoGrossoDoSul  = Mato Grosso do Sul
+ufMinasGerais = Minas Gerais
+ufPara = Pará
+ufParaiba = Paraíba  
+ufParana = Paraná
+ufPernambuco = Pernambuco
+ufPiaui = Piauí
+ufRioDeJaneiro = Rio de Janeiro
+ufRioGrandeDoSul = Rio Grande do Sul
+ufRioGrandeDoNorte = Rio Grande do Norte
+ufRondonia = Rondônia
+ufRoraima = Roraima
+ufSantaCatarina = Santa Catarina  
+ufSaoPaulo = São Paulo
+ufSergipe = Sergipe  
+ufTocantins = Tocantins  
+############ESTADOS END############
 
+############Tipos Pais BEGIN############
+tipoPaiMae = Mother
+tipoPaiPai = Father
+tipoPaiMadastra = Stepmother 
+tipoPaiPadastro = Stepfather
+tipoPaiOutros = Other
+############Tipos Pais END############
 
+############Sexo BEGIN############
+sexoFeminino = Female
+sexoMasculino = Male 
+############Sexo END############
