Acertando campo data de comunicado.

--- a/src/com/jornada/client/content/i18n/TextConstants.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants.properties
@@ -85,8 +85,8 @@ coordenadorAmbienteCompText1 = School Administration: \n
 coordenadorAmbienteCompText2 =- Courses, Disciplines, Subjects.\n
 coordenadorAmbienteCompText3 =- Teachers, Parents and Students.
 
-coordenadorAmbienteComunicado = News and Announcement
-coordenadorAmbienteComunicadoCompText1 = Announcement and News for : \n
+coordenadorAmbienteComunicado = News and Emails
+coordenadorAmbienteComunicadoCompText1 = News and Emails for : \n
 coordenadorAmbienteComunicadoCompText2 = - Teachers, Parents and Students.\n
 
 coordenadorAmbienteOcorrencia = NonConformance
@@ -117,8 +117,8 @@ professorAmbienteOcorrencia = NonConformance
 professorAmbienteOcorrenciaCompText1 = Add and Update: \n
 professorAmbienteOcorrenciaCompText2 = - Student NonConformance.\n
 
-professorAmbienteComunicado = News and Announcement
-professorAmbienteComunicadoCompText1 = News and Announcement for: \n
+professorAmbienteComunicado = News and Emails
+professorAmbienteComunicadoCompText1 = News and Email for: \n
 professorAmbienteComunicadoCompText2 = - Teachers, Parents and Students.\n
 
 professorAmbienteTopico = Topics	
@@ -145,8 +145,8 @@ alunoAmbienteNotasCompText2 = - Interactive Charts.\n
 alunoAmbienteNotasCompText3 = - Detailed Tables.\n
 
 
-alunoAmbienteComunicado = News and Announcement
-alunoAmbienteComunicadoCompText1 = News and Announcement for: \n
+alunoAmbienteComunicado = News and Emails
+alunoAmbienteComunicadoCompText1 = News and Emails for: \n
 alunoAmbienteComunicadoCompText2 = - Teachers, Parents and Students.\n
 
 alunoAmbienteHierarquia = Course Visualization
@@ -170,7 +170,7 @@ alunoAmbienteOcorrenciaCompText3 =- Courses.\n
 paisAmbiente = Parents Environment
 paisAmbienteCompText1 = Monitoring by: \n
 paisAmbienteCompText2 = - School Calendar, Grades, Homework.\n
-paisAmbienteCompText3 = - News and Communication.\n
+paisAmbienteCompText3 = - News and Emails.\n
 
 paisAmbienteAgenda = Student Agenda
 paisAmbienteAgendaCompText1 = See the agenda dates for:\n
@@ -178,8 +178,8 @@ paisAmbienteAgendaCompText2 = - Exercises.\n
 paisAmbienteAgendaCompText3 = - Homework.\n
 paisAmbienteAgendaCompText4 = - Exams.\n
 
-paisAmbienteComunicado = News and Announcement
-paisAmbienteComunicadoCompText1 = News and Announcement for: \n
+paisAmbienteComunicado = News and Emails
+paisAmbienteComunicadoCompText1 = News and Emails for: \n
 paisAmbienteComunicadoCompText2 = - Teachers, Parents and Students.\n
 
 paisAmbienteNota = Student Grades
