--- a/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
@@ -86,8 +86,8 @@ coordenadorAmbienteCompText1 = Administração da Escola: \n
 coordenadorAmbienteCompText2 =- Cursos, Disciplinas e Matérias.\n
 coordenadorAmbienteCompText3 =- Professores, Pais e Alunos.
 
-coordenadorAmbienteComunicado = Comunicados e Novidades da Escola
-coordenadorAmbienteComunicadoCompText1 = Comunicações e Novidades para: \n
+coordenadorAmbienteComunicado = Comunicados e Emails da Escola
+coordenadorAmbienteComunicadoCompText1 = Comunicações e Emails para: \n
 coordenadorAmbienteComunicadoCompText2 = - Pais, Alunos e Professores.\n
 
 coordenadorAmbienteOcorrencia = Ocorrência
@@ -118,8 +118,8 @@ professorAmbienteOcorrencia = Ocorrência
 professorAmbienteOcorrenciaCompText1 = Adicionar e Alterar: \n
 professorAmbienteOcorrenciaCompText2 = - Ocorrências dos Alunos.\n
 
-professorAmbienteComunicado = Comunicados e Novidades da Escola
-professorAmbienteComunicadoCompText1 = Comunicações e Novidades para: \n
+professorAmbienteComunicado = Comunicados e Emails da Escola
+professorAmbienteComunicadoCompText1 = Comunicações e Emails para: \n
 professorAmbienteComunicadoCompText2 = - Pais, Alunos e Professores.\n
 
 professorAmbienteTopico = Tópicos	
@@ -144,8 +144,8 @@ alunoAmbienteNotasCompText2 = - Gráficos Interativos.\n
 alunoAmbienteNotasCompText3 = - Tabelas Detalhadas.\n
 
 
-alunoAmbienteComunicado = Comunicados e Novidades da Escola
-alunoAmbienteComunicadoCompText1 = Comunicações e Novidades para: \n
+alunoAmbienteComunicado = Comunicados e Emails da Escola
+alunoAmbienteComunicadoCompText1 = Comunicações e Emails para: \n
 alunoAmbienteComunicadoCompText2 = - Pais, Alunos e Professores.\n
 
 alunoAmbienteHierarquia = Visualizar Cursos
@@ -177,8 +177,8 @@ paisAmbienteAgendaCompText2 = - Exercícios.\n
 paisAmbienteAgendaCompText3 = - Trabalhos.\n
 paisAmbienteAgendaCompText4 = - Provas.\n
 
-paisAmbienteComunicado = Comunicados e Novidades da Escola
-paisAmbienteComunicadoCompText1 = Comunicações e Novidades para: \n
+paisAmbienteComunicado = Comunicados e Emails da Escola
+paisAmbienteComunicadoCompText1 = Comunicações e Emails para: \n
 paisAmbienteComunicadoCompText2 = - Pais, Alunos e Professores.\n
 
 paisAmbienteNota = Notas do(s) Filho(s)
