- Colocando validação em campo email - Acertando design de Comunicados

--- a/src/com/jornada/client/content/i18n/TextConstants.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants.properties
@@ -588,6 +588,7 @@ geralAjuda = Help
 geralSalvar = Save
 geralCancelar = Cancel
 geralCampoObrigatorio = Field ''{0}'' is mandatory!
+geralEmailInvalido = Email format not valid on field ''{0}''!
 geralErroAtualizar = It was not possible to update {0}.
 geralErroCarregar = It was not possible to load {0}.
 geralErroCarregarDados = It was not possible to load data.
