--- a/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
@@ -590,6 +590,7 @@ geralAjuda = Ajuda
 geralSalvar = Salvar
 geralCancelar = Cancelar
 geralCampoObrigatorio = Campo ''{0}'' é de preenchimento obrigatório!
+geralEmailInvalido = Formato de email inválido no campo ''{0}''!
 geralErroAtualizar = Não foi possível atualizar {0}.
 geralErroCarregar = Não foi possível carregar {0}.
 geralErroCarregarDados = Não foi possível carregar os dados.
