Adicionando bug fixes.

--- a/src/com/jornada/client/content/i18n/TextConstants.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants.properties
@@ -696,4 +696,15 @@ documentoImprimirContrato = Print Contract
 
 ############EMAIL BEGIN############
 emailEnviado = Email successfully sent
+emailAssunto = Subject
+emailEmail = Email
+emailAnexo = Attachment
+emailFiltroCurso = Course Filter
+emailPara = For
+emailTipoUsuario = User Type 
+emailPeloMenosUsuarioPrecisaSerSelecionado = At least 1 user must be selected.  
+emailAbrirTelaParaVisualizarEmails = Open screen to visualize emails
+emailTodosOsCursos = All Courses
+emailEscolherArquivo = Choose File
+emailEnviarEmail = Send Email
 ############EMAIL END############
