--- a/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
@@ -697,5 +697,16 @@ documentoImprimirContrato = Imprimir Contrato
 
 ############EMAIL BEGIN############
 emailEnviado = Email enviado com sucesso
+emailAssunto = Assunto
+emailEmail = Email
+emailAnexo = Anexo
+emailFiltroCurso = Filtro Curso
+emailPara = Para
+emailTipoUsuario = Tipo Usuario 
+emailPeloMenosUsuarioPrecisaSerSelecionado = Pelo menos 1 usuario precisa ser selecionado.  
+emailAbrirTelaParaVisualizarEmails = Abrir tela para visualizar emails
+emailTodosOsCursos = Todos os Cursos
+emailEscolherArquivo = Escolher Arquivo
+emailEnviarEmail = Enviar Email
 ############EMAIL END############
 
