Adicionando Avaliações com Disciplinas.

--- a/src/com/jornada/client/content/i18n/TextConstants.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants.properties
@@ -446,9 +446,9 @@ notaMediaFinal = Final Average
 notaSelecionarAlunoDesejaAdicionarAlterarNota = 1 - Please select the student you want to add/update grades
 notaErroBuscarAluno = It was not possible to load students.
 notaInserirAlterarNotasAluno = 2 - Please enter or update a Student grade
-notaEditarNotasConteudoProgramatico = Update Grades by Subject
+notaEditarNotas = Update Grades
 
-notaNehumaNotaComConteudoProgramatico = There is no topic associated with this Subject.
+notaNehumaNota = There is no Evaluation for this Discipline.
 notaErroAtualizar = It was not possible to update the grade.
 
 
@@ -471,6 +471,7 @@ avaliacaoErroSalvar = It was not possible to save Evaluation!!!
 avaliacaoErroAtualizar = It was not possible to update Evaluation.
 avaliacaoErroRemover = It was not possible to remove Evaluation.
 avaliacaoNenhumaCurso = There is no Evaluation created for this Course.
+avaliacaoNenhumaDisciplina = There is no Evaluation created for this Discipline.
 avaliacaoSelecioneCurso = Please, select the Course.
 avaliacaoSalva = Evaluation successfully saved.
 avaliacaoDesejaRemover = Do you really want to remove this Evaluation: {0} ?
