--- a/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
@@ -445,9 +445,9 @@ notaMediaFinal = Média Final
 notaSelecionarAlunoDesejaAdicionarAlterarNota = 1 - Por favor, selecione o Aluno que deseja adicionar/alterar a nota
 notaErroBuscarAluno = Não foi possível buscar os Alunos.
 notaInserirAlterarNotasAluno = 2 - Por favor, insira ou altere as notas do aluno
-notaEditarNotasConteudoProgramatico = Editar Notas por Matéria
+notaEditarNotas = Editar Notas
 
-notaNehumaNotaComConteudoProgramatico = Não existe nenhum tópico associado a este Matéria.
+notaNehumaNota = Não existe nenhuma Avaliação para essa Disciplina.
 notaErroAtualizar = Não foi possível atualizar a Nota.
 
 
@@ -469,7 +469,8 @@ avaliacaoErroCarregar = Não foi possível carregar as Avaliações.
 avaliacaoErroSalvar = Avaliação não pode ser salva com sucesso!!!
 avaliacaoErroAtualizar = Não foi possível atualizar a Avaliação.
 avaliacaoErroRemover = Não foi possível remover a Avaliação.
-avaliacaoNenhumaCurso = Nenhuma Avaliação cadastrada nesse curso.
+avaliacaoNenhumaCurso = Nenhuma avaliação cadastrada nesse curso.
+avaliacaoNenhumaDisciplina = Nenhuma avaliação cadastrada nessa disciplina.
 avaliacaoSelecioneCurso = Por favor, selecione o curso.
 avaliacaoSalva = Avaliação salva com sucesso.
 avaliacaoDesejaRemover = Deseja realmente remover essa Avaliação: {0} ?
