- Adicionando Avaliação com Disciplina - Adicionando link no Boletim para listar todas as avaliações da Disciplina/Periodo.

--- a/src/com/jornada/client/content/i18n/TextConstants.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants.properties
@@ -601,6 +601,7 @@ geralSair = Logout
 geralOk = OK
 geralNumeroInteiro = Integer Number
 geralNumeroDouble = Number like 10.0 or 9.0
+geralValorEntre0E10 = Number between 0 and 10
 geralRecarregarAmbiente = The environment will be reloaded to reactivate your session. Thank you.
 geralErro = Error
 geralFecharJanela = Close Window
@@ -615,7 +616,7 @@ geralExcel = Generate Excel Spreadsheet
 idioma = Language
 idiomaIngles = English (US)
 idiomaPortugues = Portuguese (Brazil)
-idiomaErroSalvar = Idioma could not be saved!
+idiomaErroSalvar = Language could not be saved!
 senhaAlterar = Change Password 
 senhaErroSalvar = Password could not be saved!
 senhaNaoConfere = Password does no match, please try again.
