--- a/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
@@ -603,6 +603,7 @@ geralSair = Sair
 geralOk = OK
 geralNumeroInteiro = Número Inteiro
 geralNumeroDouble = Número do tipo 10.0 ou 9.0
+geralValorEntre0E10 = Número entre 0 e 10
 geralRecarregarAmbiente = O Ambiente será recarregado para reativar a sua sessão. Obrigado.
 geralErro = Erro
 geralFecharJanela = Fechar Janela
