- Adicionando Code Split - E envio de email por Unidade Escola

--- a/src/com/jornada/client/content/i18n/TextConstants.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants.properties
@@ -15,7 +15,8 @@ loginPrimeiroLogin = First Login: Please change your password
 
 
 ########### MainTitle Begin ############
-titleNome = Integrado College Parents OnLine
+#titleNome = Environment Parents OnLine
+titleNome = Integrado School Parents OnLine
 titleBemVindo = Welcome {0} {1}
 titleConfiguracao = Settings
 ########### MainTitle End ############
