--- a/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
@@ -16,6 +16,7 @@ loginPrimeiroLogin = Primeiro Login: Por favor altere sua senha
 
 
 ########### MainTitle Begin ############
+#titleNome = Ambiente Pais OnLine
 titleNome = Colégio Integrado Pais OnLine
 titleBemVindo = Bem Vindo {0} {1}
 titleConfiguracao = Configurações
