Adicionando: - Opção de Desabilitar Curso - Editar Curso como é feito no Usuário

--- a/src/com/jornada/client/content/i18n/TextConstants.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants.properties
@@ -245,6 +245,9 @@ cursoAdminCompText2 = Courses, Periods, Disciplines \n
 cursoAdminCompText3 = Subjects or Topics
 cursoImportarAlunosDoCurso = Import students from course
 cursoTodosAlunos = All students
+cursoStatus = Status
+cursoAtivo = Enable
+cursoDesativado = Disable
 ########### Curso FIM ###########  
 
 ########### Periodo Begin ###########
