--- a/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
@@ -244,6 +244,9 @@ cursoAdminCompText2 = Cursos, Períodos, Disciplinas \n
 cursoAdminCompText3 = Matérias ou Tópicos
 cursoImportarAlunosDoCurso = Importar alunos do Curso
 cursoTodosAlunos = Todos Alunos
+cursoStatus = Status
+cursoAtivo = Ativo
+cursoDesativado = Desativado
 ########### Curso FIM ###########  
 
 ########### Periodo Begin ###########
