Adicionando: - Relatorios de Boletim por Periodo - Adicionando funcionalidade para desabilitar/habilitar curso - Acrescentando pesos no periodo e nas avaliações.

--- a/src/com/jornada/client/content/i18n/TextConstants.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants.properties
@@ -35,6 +35,7 @@ menuTokenFerramentaCoordenadorTopico = ferramenta.coordenador.topico
 menuTokenFerramentaCoordenadorHierarquia = ferramenta.coordenador.hierarquia
 menuTokenFerramentaCoordenadorUsuario = ferramenta.coordenador.usuario
 menuTokenFerramentaCoordenadorDiario = ferramenta.coordenador.diario
+menuTokenFerramentaCoordenadorRelatorio = ferramenta.coordenador.relatorio
 menuTokenFerramentaProfessor = ferramenta.professor
 menuTokenFerramentaProfessorAvaliacao = ferramenta.professor.avaliacao
 menuTokenFerramentaProfessorNota = ferramenta.professor.nota
@@ -714,3 +715,14 @@ emailTodosOsCursos = All Courses
 emailEscolherArquivo = Choose File
 emailEnviarEmail = Send Email
 ############EMAIL END############
+
+############EMAIL BEGIN############
+relatorio = Report
+relatorios = Reports
+relatorioBoletimPorPeriodo = Period Report Card
+relatorioVisualisarImprimirRelatorios = Visualize and Print Reports:\n
+relatorioHistoricosEscolar = - Historical School.\n
+relatorioBoletimSalas = - Report Card Courses.\n
+relatorioFechamentoAno = - Year closing and others.
+############EMAIL END############
+
