--- a/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
@@ -36,6 +36,7 @@ menuTokenFerramentaCoordenadorTopico = ferramenta.coordenador.topico
 menuTokenFerramentaCoordenadorHierarquia = ferramenta.coordenador.hierarquia
 menuTokenFerramentaCoordenadorUsuario = ferramenta.coordenador.usuario
 menuTokenFerramentaCoordenadorDiario = ferramenta.coordenador.diario
+menuTokenFerramentaCoordenadorRelatorio = ferramenta.coordenador.relatorio
 menuTokenFerramentaProfessor = ferramenta.professor
 menuTokenFerramentaProfessorAvaliacao = ferramenta.professor.avaliacao
 menuTokenFerramentaProfessorNota = ferramenta.professor.nota
@@ -716,3 +717,12 @@ emailEscolherArquivo = Escolher Arquivo
 emailEnviarEmail = Enviar Email
 ############EMAIL END############
 
+############EMAIL BEGIN############
+relatorio = Relatório
+relatorios = Relatórios
+relatorioBoletimPorPeriodo = Boletim Por Período
+relatorioVisualisarImprimirRelatorios = Visualisar e imprimir relatorios:\n
+relatorioHistoricosEscolar = - Historicos Escolar.\n
+relatorioBoletimSalas = - Boletim Cursos.\n
+relatorioFechamentoAno = - Fechamento Ano, entre outros.
+############EMAIL END############
