- Adicionando MpHelper nos comboboxes curso - Ajustando Disciplina e Periodo para não ter nomes duplicados - Acertando Boletim Anula

--- a/src/com/jornada/client/content/i18n/TextConstants.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants.properties
@@ -268,6 +268,7 @@ periodoSalvoSucesso = Period successfully saved
 periodoCompText1 = Add and Update School Period: \n
 periodoCompText2 = - Example 01) 1. Bimester.\n
 periodoCompText3 = - Example 02) 2. Bimester.  
+periodoDuplicado =  Period ''{0}'' already exist on this course.
 ########### Periodo FIM ###########  
 
 ########### Disciplina Begin ###########
@@ -298,6 +299,7 @@ disciplinaAdicionarProfessor = Add Professor to the Disciplines
 disciplinaCompText1 = Add and Update Disciplines: \n
 disciplinaCompText2 = - Example 01) English.\n
 disciplinaCompText3 = - Example 02) Math.
+disciplinaDuplicada =  Discipline ''{0}'' already exists in this period.
 ########### Disciplina FIM ###########  
 
 ############ConteudoProgramatico Begin############
