--- a/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
@@ -267,6 +267,7 @@ periodoSalvoSucesso = Período salvo com sucesso.
 periodoCompText1 = Adicionar e Alterar Período Escolar: \n
 periodoCompText2 = - Exemplo 01) 1. Bimestre.\n
 periodoCompText3 = - Exemplo 02) 2. Bimestre.  
+periodoDuplicado =  Período ''{0}'' já existe neste curso.
 ########### Periodo FIM ###########  
 
 ########### Disciplina Begin ###########
@@ -297,6 +298,7 @@ disciplinaAdicionarProfessor = Adicionar Professor as Disciplinas
 disciplinaCompText1 = Adicionar e Alterar Disciplinas: \n
 disciplinaCompText2 = - Exemplo 01) Português.\n
 disciplinaCompText3 = - Exemplo 02) Matemática.
+disciplinaDuplicada =  Disciplina ''{0}'' já existe neste período.
 ########### Disciplina FIM ###########  
 
 ############ConteudoProgramatico Begin############
@@ -720,7 +722,7 @@ emailEnviarEmail = Enviar Email
 ############EMAIL BEGIN############
 relatorio = Relatório
 relatorios = Relatórios
-relatorioBoletimPorPeriodo = Boletim Por Período
+relatorioBoletimPorPeriodo = Boletim Período
 relatorioVisualisarImprimirRelatorios = Visualisar e imprimir relatorios:\n
 relatorioHistoricosEscolar = - Historicos Escolar.\n
 relatorioBoletimSalas = - Boletim Cursos.\n
