Adicionando Relatorios de Boletim Ano/Periodo/Disciplina e excel para imprimir.

--- a/src/com/jornada/client/content/i18n/TextConstants.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants.properties
@@ -414,6 +414,8 @@ usuarioUnidadeEscola = Unit
 usuarioBaixarPlanilhaExcel = Download Excel Spreadsheet
 usuarioCliqueAquiParaBaixar = Click here to download
 usuarioRegistro = User Register
+usuarioObservacao = Observation
+usuarioStatus = Status
 ############Usuários FIM############  
 
 
