--- a/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
+++ b/src/com/jornada/client/content/i18n/TextConstants_pt_BR.properties
@@ -413,6 +413,8 @@ usuarioUnidadeEscola = Unidade
 usuarioBaixarPlanilhaExcel = Baixar Planilha Excel
 usuarioCliqueAquiParaBaixar = Clique aqui para baixar
 usuarioRegistro = Registro do Usuário
+usuarioObservacao = Observação
+usuarioStatus = Status
 ############Usuários FIM############  
 
 
